# Kurs

./: .travis.yml  100MATCHES.c  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  gtk  kurs  kurs.c
src/: buttons.c  visual.c
